# tools

./: .gitignore  LICENSE  README.md
anyconnect/: README.md
command-repeater/: README.md  command_repeater.py  command_repeater_example.sh
fluxgen/: .coverage  README.md  pyproject.toml  pytest.ini
fluxgen/fluxgen/: cli.py  config.py  identity.py  netinfo.py  packet_builder.py  sender.py
fluxgen/fluxgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
fluxgen/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_identity.py  test_main.py  test_netinfo.py  test_packet_builder.py  test_sender.py
fluxprobe/: .coverage  FIXES_SUMMARY.md  LOOP_ISSUE_FIXED.md  QUICK_FIX_REFERENCE.md  README.md  REVIEW_REPORT.md  pyproject.toml  pytest.ini
fluxprobe/examples/protocols/: coap_get.yaml  dns_query.yaml  echo.yaml  http_request.yaml  ip_packet.yaml  modbus_tcp.yaml  mqtt_connect.yaml  snmp_get.yaml  ssh_kexinit.yaml  tcp_raw.yaml  udp_payload.yaml
fluxprobe/fluxprobe/: __init__.py  cli.py  generator.py  mutator.py  profiles.py  runner.py  schema.py  transport.py
fluxprobe/fluxprobe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fluxprobe/tests/: test_bugfixes.py  test_circular_dependency.py  test_generator_mutator.py  test_profiles.py  test_runner_cli.py  test_schema.py  test_transport.py
hpsim/: .coverage  README.md  pyproject.toml  pytest.ini  requirements.txt
hpsim/hpsim/: __init__.py  cli.py  config.py  identity.py  packet_builder.py  sender.py
hpsim/hpsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
hpsim/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_identity.py  test_main.py  test_netinfo.py  test_packet_builder.py  test_sender.py
k8s-500-vm-automation/: README.md
k8s-500-vm-automation/ansible/: ansible.cfg
k8s-500-vm-automation/ansible/group_vars/: all.yml
k8s-500-vm-automation/ansible/inventories/: aws_ec2.yaml
k8s-500-vm-automation/ansible/playbooks/: site.yml
k8s-500-vm-automation/ansible/roles/control-plane/tasks/: main.yml
k8s-500-vm-automation/ansible/roles/kubernetes-common/tasks/: main.yml
k8s-500-vm-automation/ansible/roles/vpn/tasks/: main.yml
k8s-500-vm-automation/ansible/roles/worker/tasks/: main.yml
k8s-500-vm-automation/k8s/: ping-daemonset.yaml
k8s-500-vm-automation/scripts/: ansible-bootstrap.sh  render-inventory.sh
k8s-500-vm-automation/terraform/: main.tf  outputs.tf  variables.tf
k8s-500-vm-automation/terraform/cloud-init/: control-plane.yaml  worker.yaml
manyconnect/: README.md  namespace_anyconnect.py
meraki/: README.md  __init__.py  cli.py  meraki_client.py
meraki-snapshot/: .coverage  README.md  pyproject.toml
meraki-snapshot/src/meraki_snapshot/: __init__.py  backup.py  cli.py  client.py  restore.py  storage.py
meraki-snapshot/src/meraki_snapshot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
meraki-snapshot/tests/: test_backup_and_restore.py  test_cli.py  test_client.py  test_restore.py  test_storage.py
octotunnel/: README.md  pyproject.toml
octotunnel/docs/: architecture.md
octotunnel/examples/: config.example.yaml
octotunnel/src/octotunnel/: __init__.py  cli.py  ipam.py  manager.py  netns.py  vpn.py
