[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxprobe"
version = "0.1.0"
description = "Schema-driven protocol fuzzer"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Kanchan Kumar Jha", email = "kanchankjha@gmail.com" }]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
fluxprobe = "fluxprobe.cli:main"
